--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -1,29 +1,56 @@
 * {
-    border: none;
-    padding: none;
-    box-sizing: border-box;
+  border: none;
+  padding: none;
+  box-sizing: border-box;
 }
 
 .home_style {
-    font-family: Lato;
-    font-size: 64px;
-    font-weight: 500;
-    line-height: 78px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #312B2B;
+  font-family: Lato;
+  font-size: 64px;
+  padding: 12px;
+  font-weight: 500;
+  line-height: 78px;
+  letter-spacing: 0em;
+  color: #312b2b;
 }
 
-.home_stylish{
-    font-family: Lato;
-    font-size: 17px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #312B2B;    
+.home_stylish {
+  font-family: Lato;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #312b2b;
 }
 
-.img_style{
-    height: 500px;
+.animatiom-image{
+  height: 80%;
 }
+.App_btn {
+  width: 175px;
+  height: 57px;
+  border-radius: 40px;
+  background-color:#345473;
+  border: none;
+  color:white;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+  letter-spacing: 0em;
+}
+.Play_btn {
+  width: 175px;
+  height: 57px;
+  border-radius: 40px;
+  background-color:#345473;
+  border: none;
+  color:white;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+  letter-spacing: 0em;
+}
+
