--- a/src/Style/Features.css
+++ b/src/Style/Features.css
@@ -1,21 +1,16 @@
 .search_engine{
-   font-style: normal;
+   font-family: Lato;
    font-weight: 600;
    font-size: 19px;
    line-height: 13px;
-   background: #FBFBFB;
-   /* box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.25); */
-   /* border-radius: 58px; */
-    padding: 20px;
-   color: #000000;
+   color: #123054;
      margin-top: 6%;
    }
 
    .start_head{
-       display: flex;
-       align-items: center;
-       justify-content: center;
-       color: var(--secondary-color);
+    padding: 8px;
+       color:  #123054;
+       text-align: center;
    }
    .start_para{
        display: flex;
@@ -23,10 +18,27 @@
        justify-content: center;
    
    }
-   
+   .right_para{
+    text-align: end;
+   }
+   .right_head{
+    text-align: end;
+   }
+   .categories_left_side {
+    display: flex;
+    gap: 2px;
+  }
+  .icon-style{
+    background-color: #233C54;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
 
+  }
    
-   .start_img{
+  .start_img{
        display: flex;
        align-items: center;
        justify-content: center;
