--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -44,13 +44,21 @@
   width: 175px;
   height: 57px;
   border-radius: 40px;
-  background-color:#345473;
+  background-color:white;
   border: none;
-  color:white;
+  color:black;
   font-family: Lato;
   font-size: 14px;
   font-weight: 700;
   line-height: 17px;
   letter-spacing: 0em;
 }
-
+.Play_btn:hover{
+  background-color:#345473;
+  color: white;
+  
+}
+.button-group{
+  display: flex;
+  gap: 20px;
+}
