--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
+*{
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cliploader img {
+  margin-top: 20%;
+background-image: url('../src//Images/Group.png');
+/* opacity: 0.75; */
+height: 100vh;
+background-repeat: no-repeat;
+background-size: cover;
+height: 100vh;
+max-width: 100%;
+overflow: hidden;
+  
 }
