--- a/src/Style/About.css
+++ b/src/Style/About.css
@@ -1,16 +1,15 @@
 .app_services_heading {
-    font-family: Lato;
+  font-family: Lato;
   color: #ffffff;
   text-align: justify;
 }
-
 
 .app_service_card_1 {
   background-image: url("../Images/Card_about.png");
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 25px;
-   color: #ffffff;
+  color: #ffffff;
   padding: 40px;
 }
 
@@ -20,9 +19,9 @@
 }
 
 .app_service_card_para {
-    font-family: Lato;
-    text-align: justify;
-  padding-right: 10px; 
+  font-family: Lato;
+  text-align: justify;
+  padding-right: 10px;
   margin-top: 5%;
   font-weight: 400;
 }
@@ -35,14 +34,39 @@
 .Expert_heading {
   color: #00bbdc;
 }
-.Sub_heading{
-    font-family: Lato;
-    font-weight: 400;
-    font-size: 50px;
-
+.Sub_heading {
+  font-family: Lato;
+  font-weight: 400;
+  font-size: 50px;
+}
+.social-media {
+  display: flex;
+  gap: 10px;
+}
+.social-icon {
+  background-color: #345473;
+  color: black;
+  font-size: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+}
+.social-icon:hover {
+  background-color: #00bbdc;
+  color: white;
 }
 
+.About-image {
+  margin-left: auto;
 
+}
+.About-image  img{
+  border-radius: 20px;
+
+
+}
 @media (max-width: 1280px) {
   .app_services_heading {
     padding: 0 10px 0 30px;
@@ -70,7 +94,6 @@
     padding-left: 22px;
     padding-right: 22px;
   }
-
 }
 @media (max-width: 575.98px) {
   .App_row {
