--- a/src/Style/About.css
+++ b/src/Style/About.css
@@ -17,6 +17,9 @@
   display: flex;
   flex-direction: row;
 }
+.app_service_car_head{
+  padding: 20px 50px 30px 20px;
+}
 
 .app_service_card_para {
   font-family: Lato;
@@ -37,7 +40,7 @@
 .Sub_heading {
   font-family: Lato;
   font-weight: 400;
-  font-size: 50px;
+  font-size: 40px;
 }
 .social-media {
   display: flex;
