--- a/src/Style/GetApplication.css
+++ b/src/Style/GetApplication.css
@@ -2,7 +2,7 @@
 
 .future_scope_head{
     color: #233C54;
-    line-height: 50px;
+    line-height: 60px;
 
 }
 .gaming_space{
@@ -47,6 +47,59 @@
   .Application-group{
     display:block;
     gap: 10px;
+  }
+  @media (max-width: 575px) {
+    .introduce-column{
+      margin-top: 20px;
+    }
+    .future_scope_head{
+      color: #233C54;
+      line-height: 40px;
+  }
+  .future_scope_para{
+    margin-top: 20px;
+    color:#312B2B;
+    font-weight: 500;
+    }
+    .Application-group{
+      display:flex;
+      gap: 10px;
+    }
+    .Feature_btn {
+      border-radius: 40px;
+      background-color:#345473;
+      border: none;
+      color:white;
+      font-family: Lato;
+      font-size: 12px;
+      font-weight: 700;
+      letter-spacing: 0em;
+    }
+    .Application-group-responsive{
+      margin-top: 10px;
+    }
+
+ 
+ }
+ @media (max-width:280px) {
+  .Application-group{
+    display:block !important;
+      }
+      .Application-group-responsive{
+        margin-top: 20px;
+      }
+
+  
+ }
+  @media (max-width: 768px) {
+
+  
+  }
+  @media (max-width: 1192px) {
+    .Application-group-responsive{
+      margin-left: 20px;
+    }
+
   }
   
 
