--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -15,6 +15,7 @@
   line-height: 78px;
   letter-spacing: 0em;
   color: #312b2b;
+  margin-top: 30px;
 }
 
 .home_stylish {
@@ -43,7 +44,7 @@
   border: none;
   color:white;
   font-family: Lato;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   line-height: 17px;
   letter-spacing: 0em;
@@ -61,7 +62,7 @@
   border: none;
   color:black;
   font-family: Lato;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   line-height: 17px;
   letter-spacing: 0em;
