--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -1,11 +1,9 @@
-.background-image{
-    background-image: url('../Images/Group.png');
-    /* opacity: 0.75; */
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    max-width: 100%;
-    overflow: hidden;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
+
+
+
 
