--- a/src/Style/GetInTouch.css
+++ b/src/Style/GetInTouch.css
@@ -125,7 +125,8 @@ textarea.contact-form-text {
     display: none; /* Hidden on larger screens */
   }
   .contact-text {
-    font-size: 18px;
+    font-size: 25px;
+
     color: #233b53;
     font-weight: 600;
   }
@@ -161,7 +162,7 @@ textarea.contact-form-text {
     display: none; /* Hidden on larger screens */
   }
   .contact-text {
-    font-size: 18px;
+    font-size: 40px;
     color: #233b53;
     font-weight: 600;
   }
@@ -190,11 +191,11 @@ textarea.contact-form-text {
     padding-right: 60px !important;
   }
   .rightdiv-hero { 
-    padding-left: 20px !important;
-    padding-right: 20px !important;
+    padding-left: 60px !important;
+    padding-right: 60px !important;
   }
   .icon-contact {
-    display: none; /* Hidden on larger screens */
+    display: block; /* Hidden on larger screens */
   }
   .contact-text {
     font-size: 18px;
@@ -217,7 +218,7 @@ textarea.contact-form-text {
     border-radius: 10px;
   }
   .icon-contact {
-    display: block; /* Displayed on smaller screens */
+    display: none; /* Displayed on smaller screens */
     background-color: #312b2b;
     font-size: 30px;
     color: #00bbdc;
@@ -226,5 +227,33 @@ textarea.contact-form-text {
   }
   .contact-text {
     font-size: 17px; /* Adjusted font size */
+  }
+  .Touch-head {
+    color: #312b2b;
+    font-size: 30px;
+    padding: 10px;
+  }
+  .rightdiv-hero { 
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+  }
+}
+
+
+@media only screen and (max-width: 280px) {
+  .contact-text {
+    font-size: 12px !important;
+    color: #233b53;
+    font-weight: 600;
+    margin-top: 10px;
+  }
+  .benifit_card {
+    background-color:  #00BBDC;
+    box-shadow: 0px 0px 0px 0px;
+    padding:30px;
+    color: #233b53;
+    border-radius: 10px;
+    border-radius: 10px 0 0px 10px;
+    position: relative;
   }
 }
