--- a/src/Style/GetInTouch.css
+++ b/src/Style/GetInTouch.css
@@ -2,7 +2,7 @@
   background-color:  #00BBDC;
   /* background-color: rgba(0, 187, 220, 0.2);  */
   box-shadow: 0px 0px 0px 0px;
-  padding: 60px 100px 100px 40px;
+  padding: 60px 100px 55px 40px;
   color: #233b53;
   border-radius: 10px;
   border-radius: 10px 0 0px 10px;
@@ -23,7 +23,7 @@
 }
 
 .contact-form-text {
-  margin: 16px 0;
+  margin: 5px 0;
   background: white;
   width: 100%;
   border: 3px solid #f5f5f5;
@@ -88,6 +88,7 @@ textarea.contact-form-text {
 }
 .benifit_card_hero{
   margin-top: 70px;
+  padding: 0;
 
 }
 .Gotouch-hero{
