--- a/src/Style/About.css
+++ b/src/Style/About.css
@@ -10,7 +10,7 @@
   background-size: cover;
   border-radius: 25px;
   color: #ffffff;
-  padding: 40px;
+  padding: 50px;
 }
 .about-top{
   margin-top: 30px;
@@ -20,12 +20,13 @@
   flex-direction: row;
 }
 .app_service_car_head{
-  padding: 43px 50px 30px 20px;
+  padding: 38px 70px 30px 20px;
 }
 
 .app_service_card_para {
   font-family: Lato;
   text-align: justify;
+  line-height: 32px;
   padding-right: 10px;
   margin-top: 5%;
   font-weight: 400;
@@ -64,13 +65,13 @@
 }
 
 .About-image {
-  margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
 
 }
 .About-image  img{
   border-radius: 20px;
-
-
+  height:13cm;
 }
 @media (max-width: 1280px) {
   .app_services_heading {
@@ -99,7 +100,36 @@
     padding-left: 22px;
     padding-right: 22px;
   }
+  .About-image  img{
+    border-radius: 20px;
+    width: 100%;
+    height:13cm;
+  }
 }
+@media (max-width: 992px) {
+  .app_services_heading {
+    padding: 0 10px 0 30px;
+  }
+
+  .app_services_para {
+    padding: 0 10px 0 30px;
+  }
+  .app_service_card_1 {
+    padding: 20px 30px 20px 30px;
+    margin-bottom: 20px;
+  }
+
+  .App_row {
+    padding-left: 22px;
+    padding-right: 22px;
+  }
+  .About-image  img{
+    border-radius: 20px;
+    width: 100%;
+    height:13cm;
+  }
+}
+
 @media (max-width: 575.98px) {
   .App_row {
     padding-left: 15px;
@@ -111,5 +141,13 @@
   .app_services_para {
     padding: 0 0 0 10px;
     text-align: center;
+  }
+  .app_service_car_head{
+    padding: 0px;
+  }
+  .Sub_heading {
+    font-family: Lato;
+    font-weight: 500;
+    font-size: 30px;
   }
 }
