--- a/src/Style/GetApplication.css
+++ b/src/Style/GetApplication.css
@@ -42,11 +42,17 @@
   }
   .robot{
     width: 100%;
+    height: 13cm;
   }
   .Feature_play:hover{
     background-color:#345473;
     color: white;
     
+  }
+  .hovered {
+    background-color: white;
+    color:black;
+  
   }
   .Application-group{
     margin-top: 50px;
@@ -68,6 +74,7 @@
     margin-top: 20px;
     color:#312B2B;
     font-weight: 500;
+    font-size: 22px;
     }
     .Application-group{
       display:flex;
@@ -86,6 +93,11 @@
     .Application-group-responsive{
       margin-top: 10px;
     }
+    .future_scope_para{
+      color:#312B2B;
+      font-weight: 500;
+      margin-top: 20px;
+  }
 
  
  }
@@ -96,17 +108,21 @@
       .Application-group-responsive{
         margin-top: 20px;
       }
-
-  
- }
+}
   @media (max-width: 768px) {
 
   
-  }
+}
   @media (max-width: 1192px) {
     .Application-group-responsive{
       margin-left: 20px;
     }
+    .future_scope_para{
+      color:#312B2B;
+      font-weight: 500;
+      margin-top: 20px;
+  
+  }
 
   }
   
