--- a/src/Style/About.css
+++ b/src/Style/About.css
@@ -10,7 +10,9 @@
   background-size: cover;
   border-radius: 25px;
   color: #ffffff;
-  padding: 50px;
+  padding: 40px;
+  height: 100%;
+
 }
 .about-top{
   margin-top: 30px;
@@ -20,7 +22,7 @@
   flex-direction: row;
 }
 .app_service_car_head{
-  padding: 38px 70px 10px 20px;
+  padding: 30px 0px 10px 0px;
 }
 
 .app_service_card_para {
@@ -66,8 +68,8 @@
 
 .About-image {
   display: flex;
+  align-items: center;
   justify-content: flex-end;
-
 }
 .About-image  img{
   border-radius: 20px;
