--- a/src/Style/About.css
+++ b/src/Style/About.css
@@ -77,13 +77,24 @@
 }
 @media (max-width: 1280px) {
   .app_services_heading {
-    padding: 0 10px 0 30px;
+    padding: 0 10px 0px 30px;
   }
   .App_row {
     padding-left: 22px;
     padding-right: 22px;
   }
-}
+  .app_service_card_para {
+    font-family: Lato;
+    text-align: justify;
+    line-height: 32px;
+    padding-right: 10px;
+    margin-top: 5%;
+    font-weight: 400;
+    padding: 20px 120px 0px 10px ;
+  }
+ 
+  }
+
 
 @media (max-width: 1192px) {
   .app_services_heading {
@@ -152,4 +163,44 @@
     font-weight: 500;
     font-size: 30px;
   }
+  .app_service_card_para {
+    font-family: Lato;
+    text-align: justify;
+    line-height: 32px;
+    padding-right: 10px;
+    margin-top: 5%;
+    font-weight: 400;
+    padding: 0px 0px 0px 0px  !important;
+  }
 }
+@media (max-width: 280px) {
+  .App_row {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .app_services_heading {
+    text-align: center;
+  }
+  .app_services_para {
+    padding: 0 0 0 10px;
+    text-align: center;
+  }
+  .app_service_car_head{
+    padding: 0px;
+  }
+  .Sub_heading {
+    font-family: Lato;
+    font-weight: 500;
+    font-size: 30px;
+  }
+  .app_service_card_para {
+    font-family: Lato;
+    text-align: justify;
+    line-height: 32px;
+    padding-right: 10px;
+    margin-top: 5%;
+    font-weight: 400;
+    padding: 0px 0px 0px 0px  !important;
+  }
+}
+
