--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -99,7 +99,7 @@
   width: 175px;
   height: 57px;
   border-radius: 40px;
-  background-color:white;
+  background-color:#345473;
   border: none;
   color:black;
   font-family: Lato;
@@ -109,8 +109,10 @@
   letter-spacing: 0em;
 }
 .Play_btn:hover{
-  background-color:#345473;
-  color: white;
+  background-color:white;
+
+
+  color: black;
   
 }
 .button-group{
