--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -77,7 +77,7 @@
 
 
 
-.App_btn {
+.store_btn {
   width: 175px;
   height: 57px;
   border-radius: 40px;
@@ -90,7 +90,7 @@
   line-height: 17px;
   letter-spacing: 0em;
 }
-.App_btn:hover{
+.store_btn:hover{
   background-color:white;
   color:black;
   
@@ -99,7 +99,7 @@
   width: 175px;
   height: 57px;
   border-radius: 40px;
-  background-color:#345473;
+  background-color:white;
   border: none;
   color:black;
   font-family: Lato;
@@ -109,10 +109,8 @@
   letter-spacing: 0em;
 }
 .Play_btn:hover{
-  background-color:white;
-
-
-  color: black;
+  background-color:#345473;
+  color: white;
   
 }
 .button-group{
