--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -77,7 +77,7 @@
 
 
 
-.store_btn {
+.App_btn {
   width: 175px;
   height: 57px;
   border-radius: 40px;
@@ -90,7 +90,7 @@
   line-height: 17px;
   letter-spacing: 0em;
 }
-.store_btn:hover{
+.App_btn:hover{
   background-color:white;
   color:black;
   
