--- a/src/Style/GetApplication.css
+++ b/src/Style/GetApplication.css
@@ -56,7 +56,7 @@
   }
   .Application-group{
     margin-top: 50px;
-    display:block;
+    display:flex;
     gap: 20px;
   }
   .introduce-column{
